--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+
+<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="the personal website of Perelyn" />
@@ -8,44 +9,62 @@
   <title>Perelyn</title>
 
   <link rel="stylesheet" href="styles.css" />
- </head>
+</head>
 
- <body>
+<body>
   <div id="preamble">
-   <a href="https://github.com/Perelyn-sama"><h1 class="title">Perelyn</h1></a>
+    <a href="https://github.com/Perelyn-sama">
+      <h1 class="title">Perelyn</h1>
+    </a>
 
-   <h2 class="subtitle" style="margin-bottom: 35px;">
-    contact me via
-    <a href="mailto:okohebina@gmail.com">email</a> or view my
-    <a href="https://github.com/Perelyn-sama">github</a>
-    &amp; <a href="https://twitter.com/okohebina">twitter</a>
-   </h2>
+    <h2 class="subtitle" style="margin-bottom: 35px;">
+      contact me via
+      <a href="mailto:okohebina@gmail.com">email</a> or view my
+      <a href="https://github.com/Perelyn-sama">github</a>
+      &amp; <a href="https://twitter.com/okohebina">twitter</a>
+    </h2>
   </div>
 
   <div>
-    <p style="margin-bottom: 40px; text-align: center;">/a></p>
+    <p style="margin-bottom: 40px; text-align: center;">
+      I am a software engineer who has a passion for open-source, Rust and blockchain technology
 
-   <div>
-    <h2>Open Source Work</h2>
     <div>
-     <ul>
-       <li><a href="https://github.com/airswap/airswap-protocols/pulls/Perelyn-sama"><code>Airswap</code></a>: AirSwap is an open-source community that powers the original peer-to-peer DEX: efficient swaps without slippage or counter-party risk. </li>
-      <li><a href="https://github.com/Perelyn-sama/yul_by_example"><code>Yul By Example</code></a>: Code examples in Yul. </li>
-      <li><a href="https://github.com/Perelyn-sama/airswap-rs"><code>Airswap-rs</code></a>: Unofficial Rust SDK library for the Airswap smart contracts. </li>
-      <li><a href="https://github.com/ethereum/trin/pulls/Perelyn-sama"><code>Trin</code></a>: An Ethereum portal client: a json-rpc server with nearly instant sync, and low CPU & storage usage. </li>
-     </ul>
-    </div>
+      <h2>Open Source Work</h2>
+      <div>
+        <ul>
+          <li><a href="https://github.com/airswap/airswap-protocols/pulls/Perelyn-sama"><code>Airswap</code></a>:
+            AirSwap is an open-source community that powers the original peer-to-peer DEX: efficient swaps without
+            slippage or counter-party risk. </li>
+          <li><a href="https://github.com/Perelyn-sama/yul_by_example"><code>Yul By Example</code></a>: Code examples in
+            Yul. </li>
+          <li><a href="https://github.com/Perelyn-sama/airswap-rs"><code>Airswap-rs</code></a>: Unofficial Rust SDK
+            library for the Airswap smart contracts. </li>
+          <li><a href="https://github.com/ethereum/trin/pulls/Perelyn-sama"><code>Trin</code></a>: An Ethereum portal
+            client: a json-rpc server with nearly instant sync, and low CPU & storage usage. </li>
+        </ul>
+      </div>
 
-    <h2>Publications & Talks</h2>
-    <div>
-     <ul>
-      <li><a href="https://perelyn-sama.medium.com/understanding-smart-pointers-in-rust-a-comprehensive-guide-cc06eb94a147"></a> Understanding smart pointers in rust: a comprehensive guide </li>
-      <li><a href="https://coinsbench.com/natspec-the-right-way-to-comment-ethereum-smart-contracts-6762082252d4"></a> Natspec the right way to comment ethereum smart contracts</li>
-      <li><a href="https://coinsbench.com/demystifying-foundry-9d589f03730d"></a> A step by step tutorial on how to use the foundry framework for smart contracts development</li>
-     </ul>
+      <h2>Publications & Talks</h2>
+      <div>
+        <ul>
+          <li><a
+              href="https://perelyn-sama.medium.com/understanding-smart-pointers-in-rust-a-comprehensive-guide-cc06eb94a147">Understanding
+              smart pointers in rust: a comprehensive guide </a>
+          </li>
+          <li><a
+              href="https://coinsbench.com/natspec-the-right-way-to-comment-ethereum-smart-contracts-6762082252d4">Natspec
+              the right way to comment ethereum smart contracts</a>
+          </li>
+          <li><a href="https://coinsbench.com/demystifying-foundry-9d589f03730d">Demystifying foundry</a> A step by step
+            tutorial on how to
+            use the foundry framework for smart contracts development</li>
+        </ul>
+      </div>
     </div>
-   </div>
   </div>
-  <p class="footnote">This website was modified from <a href="https://github.com/transmissions11/transmissions11.github.io"> t11s' fork</a> of the dapptools website</p>
- </body>
+  <p class="footnote">This website was modified from <a
+      href="https://github.com/transmissions11/transmissions11.github.io"> t11s' fork</a> of the dapptools website</p>
+</body>
+
 </html>
